# project-templates

./: LICENSE  Makefile
python-poetry-project/: cookiecutter.json
python-poetry-project/{{ cookiecutter.project_name }}/: .dockerignore  .gitignore  Makefile  pyproject.toml
python-poetry-project/{{ cookiecutter.project_name }}/docker/: Dockerfile  docker-compose.base.yaml  docker-compose.yaml
python-poetry-project/{{ cookiecutter.project_name }}/makefiles/: development.mk  lint.mk  local.mk
python-poetry-project/{{ cookiecutter.project_name }}/scripts/: test.sh
